feat: standarize error response and update the API documentation using swagger
